kubernetes/obsidian/obsidian-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian
  labels:
    name: obsidian
