kubernetes/obsidian/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    app: couchdb
spec:
  selector:
    app: couchdb
  ports:
  - name: http
    port: 5984
    targetPort: 5984
  - name: metrics
    port: 9984
    targetPort: 9984
  type: ClusterIP
