kubernetes/obsidian/couchdb-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-tls
  namespace: obsidian
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - couchdb.blackrock.xalg.im
  rules:
  - host: couchdb.blackrock.xalg.im
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: couchdb
            port:
              number: 5984
