kubernetes/obsidian/obsidian-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-tls
  namespace: obsidian
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - blackrock.xalg.im
  rules:
  - host: blackrock.xalg.im
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obsidian
            port:
              number: 8080
